# RiemannCalc

./: CMakeLists.txt  README.md  Riemann  Riemann_3.04.depend  Utils.cpp  datos.json  main.cpp  package-lock.json  resultado.txt  server.js  toPostFix.h
MotorCalculo/: Riemann_3.04.layout  cutIntegral.cpp  datos.json  main.cpp
public/: index.html  script.js  styleRiemann.css
txtExpresiones/: expresion.txt
